--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A custom hook that simplifies storing, retrieving, and clearing any types of data from the local storage including sync with other tabs",
   "private": false,
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "tsup",
@@ -27,9 +27,9 @@
     }
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "superjson": "^2.2.2"
+    "react": ">=18.0.0 <20.0.0",
+    "react-dom": ">=18.0.0 <20.0.0",
+    "superjson": "^2.0.0"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.15.4",
